--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<!-- Your code here -->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <!-- Title of the page -->
+        <title>My Site Title</title>
+        <!-- Link to an external stylesheet -->
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
+    <body>
+        <!-- Main content goes here -->
+    </body>
+</html>
